[package]
name = "zho-annotator"
version = "0.1.0"
edition = "2021"
description = "Dictionary-based Chinese text annotator with pinyin and zhuyin support"
license = "MIT"

[[bin]]
name = "dict-processor"
path = "src/dict_processor.rs"

[[bin]]
name = "zho-annotator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
unicode-segmentation = "1.10"
regex = "1.10"

# Text normalizer dependency (local)
zho-text-normalizer = { path = "../zho-text-normalizer" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
